# nvrhi-gui

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conanfile.py  conanfile.txt
src/: main.cpp  nvrhi_main.cpp
